[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spycey"
version = "0.0.1"
authors = [
  { name="Sagar Patel" },
]
description = "Tree based power budgeting with SPICE backend"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspice", "anytree", "engineering_notation", "shortuuid"
]

[project.urls]
"Homepage" = "https://github.com/sagrpatl/spycey"
